--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,7 @@ lto = true
 
 [dependencies]
 serde = "1"
-swc_core = { version = "0.101.*", features = ["ecma_plugin_transform"] }
-
-# .cargo/config defines few alias to build plugin.
-# cargo build-wasi generates wasm-wasi32 binary
-# cargo build-wasm32 generates wasm32-unknown-unknown binary.
+swc_core = { version = "0.101.*", features = [
+    "ecma_plugin_transform",
+    "ecma_codegen",
+] }
